--- a/usage.ipynb
+++ b/usage.ipynb
@@ -32,26 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.38north.org/2019/01/wonsan011619/'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "urls[10]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -65,7 +45,7 @@
       "author : Bradley O. Babson ..\n",
       "content : The recent visit of the DPRK’s Foreign Minister Ri Yong Ho to Hanoi and the announcement that Vietna ..\n",
       "url : https://www.38north.org/2019/02/bbabson020719/ ..\n",
-      "scrap_time : 2019-02-08-05 07:11:03 ..\n",
+      "scrap_time : 2019-02-10-05 05:05:50 ..\n",
       "\n",
       "\n",
       "title : Misreporting the Trump Administration’s Boffo Break with the Failed North Korea Policy of the Past ..\n",
@@ -73,7 +53,7 @@
       "author : Leon V. Sigal ..\n",
       "content : The US Special Representative for North Korea Stephen R. Biegun broke important new ground on admini ..\n",
       "url : https://www.38north.org/2019/02/lsigal020519/ ..\n",
-      "scrap_time : 2019-02-08-05 07:11:04 ..\n",
+      "scrap_time : 2019-02-10-05 05:05:51 ..\n",
       "\n",
       "\n",
       "title : China’s Sanctions Enforcement and Fuel Prices in North Korea: What the Data Tells Us ..\n",
@@ -81,9 +61,55 @@
       "author : Benjamin Katzeff Silberstein ..\n",
       "content : China is by far North Korea’s largest trading partner, accounting for up to 90 percent of its trade  ..\n",
       "url : https://www.38north.org/2019/02/bkatzeffsilberstein020119/ ..\n",
-      "scrap_time : 2019-02-08-05 07:11:05 ..\n",
+      "scrap_time : 2019-02-10-05 05:05:51 ..\n",
       "\n",
-      "\n"
+      "\n",
+      "title : Preparing for a “Decent Chance” of Success and Failure with North Korea ..\n",
+      "time : February 1, 2019 ..\n",
+      "author : Patrick M. Cronin ..\n",
+      "content : In a presidential tweet on Wednesday, President Donald Trump sounded cautiously hopeful regarding ne ..\n",
+      "url : https://www.38north.org/2019/02/pcroninklee020119/ ..\n",
+      "scrap_time : 2019-02-10-05 05:05:53 ..\n",
+      "\n",
+      "\n",
+      "title : Let’s Get Perspective ..\n",
+      "time : January 31, 2019 ..\n",
+      "author : Joel S. Wit ..\n",
+      "content : Dan Coats, the Director of National Intelligence, made big news this week with a series of assertion ..\n",
+      "url : https://www.38north.org/2019/01/jwit013119/ ..\n",
+      "scrap_time : 2019-02-10-05 05:05:53 ..\n",
+      "\n",
+      "\n",
+      "title : Why We Should be Skeptical About Recent Reports on North Korea’s Biological Weapons Programs ..\n",
+      "time : January 30, 2019 ..\n",
+      "author : John Parachini ..\n",
+      "content : While the use of biological weapons (BW) can have great consequences and any state having them in th ..\n",
+      "url : https://www.38north.org/2019/01/jparachini013019/ ..\n",
+      "scrap_time : 2019-02-10-05 05:05:54 ..\n",
+      "\n",
+      "\n",
+      "title : Reports of “Secret” North Korean Missile Bases: Much Ado about Not Much ..\n",
+      "time : January 28, 2019 ..\n",
+      "author : Daniel R. DePetris ..\n",
+      "content : President Trump and North Korean leader Kim Jong Un have now agreed to meet for their second summit  ..\n",
+      "url : https://www.38north.org/2019/01/ddepetris012819/ ..\n",
+      "scrap_time : 2019-02-10-05 05:05:55 ..\n",
+      "\n",
+      "\n",
+      "('Connection aborted.', OSError(\"(10054, 'WSAECONNRESET')\"))\n",
+      "Parsing error from https://www.38north.org/2019/01/jchurch012319/\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'items'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-86806d7fdb70>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0murl\u001b[0m \u001b[1;32min\u001b[0m \u001b[0murls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m     \u001b[0mjson_object\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparse_page\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0murl\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 10\u001b[1;33m     \u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_object\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-2-86806d7fdb70>\u001b[0m in \u001b[0;36mpprint\u001b[1;34m(json_object)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mpprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mjson_object\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mjson_object\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'{} : {} ..'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'\\n'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'items'"
      ]
     }
    ],
@@ -95,79 +121,22 @@
     "\n",
     "SLEEP = 0.5\n",
     "\n",
-    "for url in urls[:3]:\n",
+    "for url in urls[:10]:\n",
     "    json_object = parse_page(url)\n",
     "    pprint(json_object)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 / 50] (February 7, 2019) How Vietnam’s Transition Experience May be Helpful for North Korea Today\n",
-      "[2 / 50] (February 5, 2019) Misreporting the Trump Administration’s Boffo Break with the Failed North Korea Policy of the Past\n",
-      "[3 / 50] (February 1, 2019) China’s Sanctions Enforcement and Fuel Prices in North Korea: What the Data Tells Us\n",
-      "[4 / 50] (February 1, 2019) Preparing for a “Decent Chance” of Success and Failure with North Korea\n",
-      "[5 / 50] (January 31, 2019) Let’s Get Perspective\n",
-      "[6 / 50] (January 30, 2019) Why We Should be Skeptical About Recent Reports on North Korea’s Biological Weapons Programs\n",
-      "[7 / 50] (January 28, 2019) Reports of “Secret” North Korean Missile Bases: Much Ado about Not Much\n",
-      "[8 / 50] (January 23, 2019) Inspector O and the New Cat\n",
-      "[9 / 50] (January 18, 2019) Why is Kim Yong Chol Still Pyongyang’s Choice for US-DPRK Relations?\n",
-      "[10 / 50] (January 18, 2019) Advancing Peace and Security on the Korean Peninsula: The Case for Koreanization\n",
-      "[11 / 50] (January 16, 2019) Beach Watch: North Korea’s Wonsan Gets a Boost\n",
-      "[12 / 50] (January 9, 2019) North Korea’s Yongbyon Nuclear Facilities: Well Maintained but Showing Limited Operations\n",
-      "[13 / 50] (January 9, 2019) Kim Jong Un’s New Year’s Speech: On the Domestic Front\n",
-      "[14 / 50] (January 8, 2019) Opportunities for Dynamic Force Employment in East Asia\n",
-      "[15 / 50] (January 4, 2019) Kim Jong Un’s New Year’s Address: The Art of Propaganda\n",
-      "[16 / 50] (January 3, 2019) Hints for 2019: Kim Jong Un’s New Year’s Address\n",
-      "[17 / 50] (January 2, 2019) Kim Jong Un’s 2019 New Year’s Address: Dropping a Strategic Bombshell\n",
-      "[18 / 50] (December 30, 2018) What Will Kim Jong Un Say on New Year’s Day?\n",
-      "[19 / 50] (December 28, 2018) For North Korea, Verifying Requires Reconciling: The Lesson from A Troubled Past—Part II\n",
-      "[20 / 50] (December 27, 2018) North Korean Media: KCTV’s Coverage of Kim Jong Un’s Diplomatic Push in 2018\n",
-      "[21 / 50] (December 26, 2018) From CVID to CRID: A Russian Perspective\n",
-      "[22 / 50] (December 21, 2018) Way Too Much to Do About Nothing\n",
-      "[23 / 50] (December 21, 2018) DPRK Repeats Stance on Denuclearization\n",
-      "[24 / 50] (December 19, 2018) Rebuttal to Mr. Katzeff Silberstein\n",
-      "[25 / 50] (December 18, 2018) Could Peace in Korea Derail?\n",
-      "[26 / 50] (December 17, 2018) Pyongyang: Willing to Wait\n",
-      "[27 / 50] (December 14, 2018) For North Korea, Verifying Requires Reconciling: The Lesson from A Troubled Past—Part I\n",
-      "[28 / 50] (December 12, 2018) North Korea’s Punggye-ri Nuclear Test Site: Current Status and Future Inspections\n",
-      "[29 / 50] (December 6, 2018) The Problem With Aid to North Korea is Bigger Than Diversion\n",
-      "[30 / 50] (December 4, 2018) North Korea’s Wi-Fi Story: The Mirae is Today\n",
-      "[31 / 50] (November 29, 2018) North Korea’s Hwasong-14 ICBM: New Data Indicates Shorter Range Than Many Thought\n",
-      "[32 / 50] (November 28, 2018) Why Insisting on a North Korean Nuclear Declaration Up Front is a Big Mistake\n",
-      "[33 / 50] (November 28, 2018) Dogs Not Barking: Pyongyang’s Long Silence\n",
-      "[34 / 50] (November 19, 2018) Look Before You Tweet: The Perils of Rushing Analysis\n",
-      "[35 / 50] (November 16, 2018) North Korea’s Yongbyon Nuclear Scientific Research Center: 5 MWe Reactor Unlikely Operating\n",
-      "[36 / 50] (November 16, 2018) Why Korea Needs Peace: A Korean American Perspective\n",
-      "[37 / 50] (November 15, 2018) Imagining a New US-South Korean Security Architecture\n",
-      "[38 / 50] (November 14, 2018) Is the North Korean Won Pegged to the RMB? Probably, but the Numbers Don’t Show It\n",
-      "[39 / 50] (November 13, 2018) The New York Times’ Misleading Story on North Korean Missiles\n",
-      "[40 / 50] (November 13, 2018) Pyongyang Warns Again on “Byungjin” Revival\n",
-      "[41 / 50] (November 9, 2018) North Korea’s Punggye-ri Nuclear Test Site: Minor Cleanup Activity\n",
-      "[42 / 50] (November 8, 2018) North Korea’s Sohae Satellite Launching Station: Low Level Activity Continues\n",
-      "[43 / 50] (November 7, 2018) How to Structure Sanctions Relief in Any Future DPRK Deal\n",
-      "[44 / 50] (November 5, 2018) Toward a Ban on Deployment and Production of Kim’s Missiles\n",
-      "[45 / 50] (November 5, 2018) DPRK Notches Up the Warnings\n",
-      "[46 / 50] (November 2, 2018) North Korea’s Uranium Mining and Milling Operations Continue at Pyongsan\n",
-      "[47 / 50] (October 26, 2018) Can Abe Solve Japan’s “North Korea” Dilemma?\n",
-      "[48 / 50] (October 24, 2018) China’s Potential Role as Security Guarantor for North Korea\n",
-      "[49 / 50] (October 23, 2018) The Case for Funding the UN’s Request for Humanitarian Assistance to the DPRK\n",
-      "[50 / 50] (October 22, 2018) North Korea Carefully Revs Up Public Warnings to Washington\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from N38_scraper import yield_latest_allnews\n",
     "\n",
-    "begin_date = '2018-07-01'\n",
+    "begin_date = '2019-01-10'\n",
     "max_num = 50\n",
     "sleep = 1.0\n",
     "\n",
